<resources>
    <string name="app_name">WaterReminder</string>
    <string name="app_name_home">Water Reminder</string>
    <string name="type_email">Type your email</string>
    <string name="type_password">Type your password</string>
    <string name="retype_password">Retype your password</string>
    <string name="tv_welcom_to_water_reminder">Welcom to Water Reminder</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="don_t_have_an_account">Don\'t Have An Account .. !?</string>
    <string name="create_one">Create One.</string>
    <string name="tv_email">E-Mail</string>
    <string name="edt_don_t_have_an_account">Don\'t Have An Account .. !?</string>
    <string name="txt_create_one">Create One.</string>
    <string name="edt_type_your_password">type your password</string>
    <string name="edt_type_your_username">type your username</string>
    <string name="txtv_update_profile">Update Profile</string>
    <string name="btn_update">Update</string>
    <string name="itm_profile">Profile</string>
    <string name="itm_logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>