<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="@drawable/border"
                android:fontFamily="@font/oxygen_light"
                android:gravity="center"
                android:text="@string/txtv_update_profile"
                android:textColor="@color/graylight"
                android:textSize="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/el_margin">



                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/el_margin"
                        android:layout_marginBottom="@dimen/el_margin"
                        android:text="Username"
                        android:textColor="@color/graylight"
                        android:textSize="@dimen/txt_size" />

                    <EditText
                        android:id="@+id/edt_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/el_margin"
                        android:layout_marginBottom="@dimen/el_margin"
                        android:background="@drawable/rectangle_shape"
                        android:hint="@string/edt_type_your_username"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp" />

                    <TextView
                        android:id="@+id/password_sign_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/el_margin"
                        android:layout_marginBottom="@dimen/el_margin"
                        android:text="Password"
                        android:textColor="@color/graylight"
                        android:textSize="@dimen/txt_size" />

                    <EditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/el_margin"
                        android:layout_marginBottom="@dimen/el_margin"
                        android:background="@drawable/rectangle_shape"
                        android:hint="@string/type_password"
                        android:inputType="textPassword"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp" />

                    <TextView
                        android:id="@+id/confirme_password"
                        android:layout_width="228dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="@dimen/el_margin"
                        android:layout_marginBottom="@dimen/el_margin"
                        android:text="Confirme Password"
                        android:textColor="@color/graylight"
                        android:textSize="@dimen/txt_size" />

                    <EditText
                        android:id="@+id/edt_confirme_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/el_margin"
                        android:layout_marginBottom="@dimen/el_margin"
                        android:background="@drawable/rectangle_shape"
                        android:hint="@string/retype_password"
                        android:inputType="textPassword"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp" />


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:orientation="vertical"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="1.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginBottom="@dimen/el_margin"
                                android:text="@string/height"
                                android:textColor="@color/black"
                                android:textSize="@dimen/txt_size" />

                            <EditText

                                android:id="@+id/edt_height"
                                android:layout_width="96dp"
                                android:layout_height="wrap_content"
                                android:background="@drawable/rectangle_shape"
                                android:inputType="number"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linearLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:orientation="vertical"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.0">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginBottom="@dimen/el_margin"
                                android:text="@string/weight"
                                android:textColor="@color/black"
                                android:textSize="@dimen/txt_size" />

                            <EditText

                                android:id="@+id/edt_weight"
                                android:layout_width="96dp"
                                android:layout_height="wrap_content"
                                android:background="@drawable/rectangle_shape"
                                android:inputType="number"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp" />

                        </LinearLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>


                    <Button
                        android:id="@+id/btn_update"
                        android:layout_width="173dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/el_margin"
                        android:background="@drawable/buttonsignin"
                        android:text="@string/btn_update"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.554"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.847" />

                </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>