<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke"
  >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:fontFamily="@font/oxygen_light"
        android:gravity="center"
        android:text="My Profile"
        android:textColor="@color/graylight"
        android:textSize="@dimen/txt_size_h2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/el_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/el_margin"
                android:layout_marginBottom="@dimen/el_margin"
                android:text="Email"
                android:textColor="@color/graylight"
                android:textSize="@dimen/txt_size"
                />

            <TextView
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/el_margin"
                android:layout_marginBottom="@dimen/el_margin"
                android:background="@drawable/rectangle_shape"
                android:padding="@dimen/el_margin"
                android:text="@string/type_email" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/el_margin"
                android:layout_marginBottom="@dimen/el_margin"
                android:text="Username"
                android:textColor="@color/graylight"
                android:textSize="@dimen/txt_size" />

            <TextView
                android:id="@+id/txt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/el_margin"
                android:layout_marginBottom="@dimen/el_margin"
                android:background="@drawable/rectangle_shape"
                android:hint="@string/edt_type_your_username"
                android:padding="@dimen/el_margin" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="0dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/el_margin"
                        android:text="@string/height"
                        android:textColor="@color/black"
                        android:textSize="@dimen/txt_size" />

                    <TextView

                        android:id="@+id/txt_height"
                        android:layout_width="@dimen/mini_rectangle_shape_height"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rectangle_shape"
                        android:inputType="number"
                        android:padding="@dimen/el_margin"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/el_margin"
                        android:text="@string/weight"
                        android:textColor="@color/black"
                        android:textSize="@dimen/txt_size" />

                    <TextView

                        android:id="@+id/txt_weight"
                        android:layout_width="@dimen/mini_rectangle_shape_height"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rectangle_shape"
                        android:inputType="number"
                        android:padding="@dimen/el_margin" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>